--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Bootstrap cdn -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
+  
   <!-- Fontawesome cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -27,7 +27,7 @@
           <div class="d-sm-none">
             <i class="fa-solid fa-bars border p-1 cursor-pointer"></i>
           </div>
-            <div class="container-fluid d-none d-sm-flex">
+            <div class="container-fluid d-none d-sm-flex justify-content-end">
               <div class="row">
                 <div class="col">
                   <a class="text-white text-decoration-none" href="">Portfolio</a>
@@ -48,14 +48,109 @@
   <main>
     <div class="header-height"></div>
     <!-- Start  Bootstrap -->
-    <section>
-      <div class="container-fluid bg-aquamarine py-4">
-        <div class="container">
-          
+    <div class="section">
+      <div class="container-fluid bg-aquamarine py-5">
+        <div class="container-sm d-flex align-items-center text-white flex-column gap-2">
+          <img class="avatar" src="./img/avatar.svg" alt="Image not found">
+          <h1>START BOOTSTRAP</h1>
+          <div class="d-flex align-items-center justify-content-center w-50">
+            <div class="line w-25"></div>
+            <div class="px-2">
+              <i class="fa-solid fa-star fs-3"></i>
+            </div>
+            <div class="line  w-25"></div>
+          </div>
+          <span>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
         </div>
       </div>
-    </section>
+    </div>
+
+    <!-- Portfolio -->
+    <div class="section">
+      <div class="container-lg d-flex align-items-center flex-column gap-2 py-4">
+        <h3>PORTFOLIO</h3>
+        <div class="d-flex align-items-center justify-content-center w-50">
+          <div class="line w-25"></div>
+          <div class="px-2">
+            <i class="fa-solid fa-star fs-3"></i>
+          </div>
+          <div class="line  w-25"></div>
+        </div>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4">
+          <div class="col">
+            <img class="w-100 rounded-3" src="./img/cabin.png" alt="Image not found">
+          </div>
+          <div class="col">
+            <img class="w-100 rounded-3" src="./img/cake.png" alt="Image not found">
+          </div>
+          <div class="col">
+            <img class="w-100 rounded-3" src="./img/circus.png" alt="Image not found">
+          </div>
+          <div class="col">
+            <img class="w-100 rounded-3" src="./img/game.png" alt="Image not found">
+          </div>
+          <div class="col">
+            <img class="w-100 rounded-3" src="./img/safe.png" alt="Image not found">
+          </div>
+          <div class="col">
+            <img class="w-100 rounded-3" src="./img/submarine.png" alt="Image not found">
+          </div>        
+        </div>
+      </div>
+    </div>
+
+    <!-- About section -->
+    <div class="section bg-aquamarine">
+      <div class="container-sm d-flex align-items-center flex-column gap-2 py-4 text-white">
+        <h3>ABOUT</h3>
+        <div class="d-flex align-items-center justify-content-center w-50">
+          <div class="line w-25"></div> 
+          <div class="px-2">
+            <i class="fa-solid fa-star fs-3"></i>
+          </div>
+          <div class="line  w-25"></div>
+        </div>
+        <div class="row row-cols-1 row-cols-sm-2">
+        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files includinf HTML, CSS and JavaScript as well as optional LESS stylesheets for easy costumization.</p>
+        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point.</p>
+        </div>
+        <div>
+          <button class="btn btn-outline-light">
+            <i class="fa-solid fa-download"></i>
+            Download
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Contact me section -->
+    <div class="section">
+      <div class="container-sm d-flex align-items-center flex-column gap-2 py-4">
+        <h3>CONTACT ME</h3>
+        <div class="d-flex align-items-center justify-content-center w-50">
+          <div class="line w-25"></div> 
+          <div class="px-2">
+            <i class="fa-solid fa-star fs-3"></i>
+          </div>
+          <div class="line  w-25"></div>
+        </div>
+        <form class="d-flex flex-column w-100">
+          <input type="text" name="name" placeholder="Name">
+          <input type="email" name="email" placeholder="Email Address">
+          <input type="tel" name="phone-number" placeholder="Phone Number">
+          <textarea type="text" name="message" placeholder="Message"></textarea>
+          <div class="mt-3">
+            <button type="submit" class="btn bg-aquamarine text-white">Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
   </main>
+
   <!-- Footer -->
+  <footer>
+
+  </footer>
 </body>
 </html>
